hphp/test/zend/bad/ext/standard/tests/array/bug44929.php
<?php
$a = array(b'001',b'008',b'005',b'00011',b'03',b'000014',b'-123',b'0.002',b'00',b'0',b'0_0',b'0-0');
natsort($a);
var_dump($a);
?>